# github_scraper

./: .gitignore  QUICKSTART.md  README.md  examples.py  github_pulse_scraper.py  github_pulse_web_scraper.py  pulse  pyproject.toml  requirements.txt  utils.py
tests/: test_scraper.py
